# Antunes-Lab

./: .gitignore  .pre-commit-config.yaml  .script.swp  Antunes-Lab.code-workspace  README.md  package-lock.json  pyproject.toml  script
ansible/playbooks/: ping.yml
linux-scripts/: Generator.sh  Slot_generator_v2.0.sh  headsets.cfg  sysinfo.sh
others/: script
others/tests/: test_smoke.py
portfolio/app/calculator/: page.tsx
portfolio/components/sections/: hero.tsx  navbar.tsx  skills.tsx  star-background.tsx
portfolio/components/ui/: hero-content.tsx  project-card.tsx  skill-data-provider.tsx  skill-text.tsx
powershell/: Get-SysInfo.ps1
programming-languages/javascript/: 01-function.js
programming-languages/python/: README.md
programming-languages/typescript/: 01-types.ts  02-functions.ts  03-objects-basics.ts  04-interfaces.ts  05-interfaces-02.ts  06-events.ts
projects/: README.md
python/: README.md
src/app/: main.py
