[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trapp-python"
version = "0.1.0"
description = "Victor's Ubuntu VM Python workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
trapp-python = "app.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "black>=24.0", "isort>=5.13", "pre-commit>=3.7"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
